# online-cinema

./: .env.sample  .flake8  .gitignore  Dockerfile  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  pyproject.toml  pytest.ini
commands/: run_migration.sh  run_web_server_prod.sh  set_nginx_basic_auth.sh
configs/nginx/: nginx.conf
docker/mailhog/: Dockerfile
docker/tests/: Dockerfile
src/: main.py
src/celery_app/: tasks.py  worker.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: 4d172a8f09d3_temp_migration.py  6357ab22ad32_initial_migration.py  fd396396a943_initial_migration.py
src/database/models/: accounts.py  movies.py
src/exceptions/: __init__.py
src/notifications/: __init__.py  conf.py  emails.py
src/notifications/templates/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html
src/repositories/: accounts.py
src/routes/: accounts.py
src/schemas/: __init__.py  accounts.py  movies.py
src/schemas/examples/: movies.py
src/security/: tokens.py
src/services/: accounts.py
src/tests/: conftest.py  extract_html.py
src/tests/test_e2e/: test_email_notification.py
src/tests/test_integration/: test_accounts.py
